# rs-notes

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  rs-app-deploy.yml
mdx_rs/: Cargo.toml
mdx_rs/src/: main.rs  mdx.rs  number.rs  util.rs
mdx_rs/src/model/: header.rs  keyinfo.rs  mdx.rs  mod.rs
resources/: LSC4.mdx.db  葛传椝英语惯用法词典.mdx
src/: actix_web.rs
static/: welcome.html
