[package]
name = "rs-notes"
version = "0.1.0"
authors = ["xiongdahu <xiongwengui67@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# build multiple binaries in one cargo build
[[bin]]
name = "rs-notes"
path = "src/actix_web.rs"

[[bin]]
name = "bin1"
path = "src/bin/ownship.rs"


[workspace]
members = [
".",
"mdx_rs",
"rkt"
]


[dependencies]
image="*"
redis = "*"
actix-rt = "1.0.0"
actix-web = "2.0.0"
actix-files = "*"
actix-session = "0.3.0"
actix-utils = "1.0.3"
futures = "0.3.1"
env_logger = "*"
bytes = "0.5"

# reqwest
scroll = "0.10"
log = "*"
reqwest = { version="*",features = ["json"] }
tokio =  { version = "0.2", features = ["full"] }
serde = { version = "*", features = ["derive"] }
ferris-says = "*"

# search
threadpool = "*"

# warp
warp = "0.2.*"

# rocket
rocket = "0.4"

#
ripemd128 = "0.1.2"
salsa20 = "0.5.2"
adler32 = "*"
regex="*"
byteorder="*"
rust-lzo = "0.6.2"
libsqlite3-sys = "0.18.0"
encoding_rs = "0.8.23"
rbtree = "0.1"
derive_builder="*"
flate2 = "1.0"
miniz_oxide = "0.3.7"