[package]
name = "mdx_rs"
version = "0.1.0"
authors = ["cod3fn <xiongwengui67@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
reqwest = { version="*",features = ["json"] }
tokio =  { version = "0.2", features = ["full"] }
serde = { version = "*", features = ["derive"] }

# search
threadpool = "*"

# warp
warp = "0.2.*"

# rocket
rocket = "0.4"
rocket_contrib="*"
#
ripemd128 = "0.1.2"
hex-literal="*"
salsa20 = "0.5.2"
adler32 = "*"
regex="*"
byteorder="*"
rust-lzo = "0.6.2"
rusqlite = {version = "0.23.1", features = ["bundled"]}
encoding_rs = "0.8.23"
rbtree = "0.1"
derive_builder="*"
miniz_oxide = "0.3.7"
flate2 = "1.0"

