[package]
name = "mdx_rs"
version = "0.1.0"
authors = ["cod3fn <xiongwengui67@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
reqwest = { version="*",features = ["json"] }

warp="*"
pretty_env_logger = "0.4"
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.6"
tokio = { version = "0.2", features = ["macros"] }
listenfd = "0.3"

# search
threadpool = "*"


# rocket
rocket = "0.4"
rocket_contrib="*"
rocket_codegen="*"
#
ripemd128 = "0.1.2"
hex-literal="*"
salsa20 = "0.5.2"
adler32 = "*"
regex="*"
byteorder="*"
rust-lzo = "0.6.2"
rusqlite = {version = "0.23.1", features = ["bundled"]}
encoding_rs = "0.8.23"
rbtree = "0.1"
derive_builder="*"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }

